Blackpurl/src/objects/Reporting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for Reporting of Data</description>
    <fields>
        <fullName>Is_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipient_Email__c</fullName>
        <description>Semicolon separated Receipient Email</description>
        <label>Receipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Objects__c</fullName>
        <description>Semicolon Separated  Objects</description>
        <label>Reporting Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reporting</label>
</CustomObject>